deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasm-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wasm-app
  template:
    metadata:
      labels:
        app: wasm-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: wasm-app
          image: DOCKER_IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
