service.yml
apiVersion: v1
kind: Service
metadata:
  name: wasm-service
spec:
  type: ClusterIP
  selector:
    app: wasm-app
  ports:
    - port: 80
      targetPort: 8082
